Añadidas preguntas tema 1 con acentos

--- a/Preguntas_Test/t1.md
+++ b/Preguntas_Test/t1.md
@@ -3,7 +3,7 @@
 
 Una granja web...
 
- a) Son sistemas muy complejos pero dif’cilmente flexibles y funcionales.  
+ a) Son sistemas muy complejos pero difÃ­cilmente flexibles y funcionales.  
  
  b) Son sistemas simples y sumamente flexibles y funcionales.  
  
@@ -16,13 +16,13 @@ Una granja web...
  
  Cuando decimos que nuestro sitio web es escalable es porque...  
  
- a) Nuestro sitio tiene la capacidad para dar soporte a un nœmero creciente de usuarios.
+ a) Nuestro sitio tiene la capacidad para dar soporte a un nÃºmero creciente de usuarios.
  
- b) Lo hemos montado escal—n a escal—n.
+ b) Lo hemos montado escalÃ³n a escalÃ³n.
  
- c) Cuantos m‡s usuarios tengamos m‡s escalar‡n nuestros beneficios.
+ c) Cuantos mÃ¡s usuarios tengamos mÃ¡s escalarÃ¡n nuestros beneficios.
  
- d) Nuestro sitio tiene la capacidad para dar soporte a un nœmero no creciente de usuarios.
+ d) Nuestro sitio tiene la capacidad para dar soporte a un nÃºmero no creciente de usuarios.
  
  respuesta correcta: A
  
