Añadidas preguntas tema 2

--- a/Preguntas_Test/t2.md
+++ b/Preguntas_Test/t2.md
@@ -1,7 +1,7 @@
 # Preguntas Tema 2
 
 
-Cuando hablamos de escalar un sitio web, ¿a que nos referimos cuando nos referimos a la transparencia de ubicación?  
+Cuando hablamos de escalar un sitio web, ¿a que nos referimos cuando nos hablamos de la transparencia de ubicación?  
 
  a) A que exista dependencia de una máquina concreta para ejecutarse la aplicación.  
  
