Añadidas preguntas tema 6

--- a/Preguntas_Test/t6.md
+++ b/Preguntas_Test/t6.md
@@ -1,7 +1,7 @@
 # Preguntas Tema 5   
 
 
-Que tarea de las siguientes no las lleva a cabo el cortafuegos:       
+Que tarea de las siguientes no la lleva a cabo el cortafuegos:       
 
  a) Bloquear y filtrar paquetes de red.   
  
